# short-rs

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 20240604005823_links.up.sql  20240608001723_link_statistics.up.sql  20240608205618_settings.up.sql
src/: auth.rs  main.rs  models.rs  routes.rs  utils.rs
