[package]
name = "short-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.6.1"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
